# scrabble-word-finder

./: .editorconfig  .merlin  Cargo.toml  README.md  bsconfig.json  elm.json  package.json
elm-src/: Main.elm
ocaml-src/: Main.bs.js  Main.ml  shim.bs.js  shim.ml
src/: lib.rs  main.rs  solver.rs  util.rs  web.rs
static/: index-elm.html  index-ocaml.html  index.html
