[package]
name = "scrabbler"
version = "0.1.0"
authors = ["Rami Chowdhury <rami.chowdhury@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-http = "1.0.1"
actix-files = "0.2.1"
serde = "1.0.106"
serde_json = "1.0"
failure = "0.1.7"
lazy_static = "1.4.0"
structopt = "0.3.13"
